--- a/PizzaStore/appsettings.json
+++ b/PizzaStore/appsettings.json
@@ -6,7 +6,7 @@
     },
 
   "ConnectionStrings": {
-      "DefaultConnection": "server=localhost;port=3306;database=ef;user=root;password=your_password"
+      "DefaultConnection": "server=localhost;port=3306;database=odin;user=root;password=Nicholas01**"
     }
   },
   "AllowedHosts": "*"
